# graiax-anchor

./: README.md  demo.md  demo.py  pyproject.toml
src/graiax/anchor/: __init__.py  app.py  context.py  dispatcher.py  exception.py  log.py  service.py  typing.py
src/graiax/anchor/connection/: __init__.py  config.py  http.py  util.py  ws.py
src/graiax/anchor/event/: __init__.py  lifecycle.py  message.py  notice.py  request.py
src/graiax/anchor/message/: __init__.py  chain.py  segment.py
src/graiax/anchor/message/parser/: __init__.py  base.py
src/graiax/anchor/model/: __init__.py  relationship.py  util.py
src/graiax/anchor/util/: __init__.py  saya.py  send.py  validator.py
